
  Closes #3692

* Fix false-positive of ``unused-private-member`` when using nested functions in a class

  Closes #4673

* Fix crash for ``unused-private-member`` that occurred with nested attributes.

  Closes #4755

* Fix a false positive for ``unused-private-member`` with class names

  Closes #4681


What's New in Pylint 2.9.6?
===========================
Release date: 2021-07-28

* Fix a false positive ``undefined-variable`` when variable name in decoration
  matches function argument

  Closes #3791


What's New in Pylint 2.9.5?
===========================
Release date: 2021-07-21

* Fix a crash when there would be a 'TypeError object does not support
  item assignment' in the code we parse.

  Closes #4439

* Fix crash if a callable returning a context manager was assigned to a list or dict item

  Closes #4732

* Fix a crash when a AttributeInferenceError was not handled properly when
  failing to infer the real name of an import in astroid.

  Closes #4692


What's New in Pylint 2.9.4?
===========================
Release date: 2021-07-20

* Added ``time.clock`` to deprecated functions/methods for python 3.3

* Fix bug in which --fail-on can return a zero exit code even when the specified issue is present

  Closes #4296
  Closes #3363

* Fix hard failure when handling missing attribute in a class with duplicated bases

  Closes #4687

* Fix false-positive ``consider-using-with`` (R1732) if a ternary conditional is used together with ``with``

  Closes #4676

* Fix false-positive ``deprecated-module`` when relative import uses deprecated module name.

  Closes #4629

* Fix false-positive ``consider-using-with`` (R1732) if ``contextlib.ExitStack`` takes care of calling the ``__exit__`` method

  Closes #4654

* Fix a false positive for ``unused-private-member`` when mutating a private attribute
  with ``cls``

  Closes #4657

* Fix ignored empty functions by similarities checker with "ignore-signatures" option enabled

  Closes #4652
