@@ -1,5 +1,0 @@
-superfluous-parens:5:0::Unnecessary parens after 'if' keyword
-superfluous-parens:7:0::Unnecessary parens after 'not' keyword
-superfluous-parens:11:0::Unnecessary parens after 'for' keyword
-superfluous-parens:13:0::Unnecessary parens after 'if' keyword
-superfluous-parens:18:0::Unnecessary parens after 'del' keyword
